--- a/bochs/.bochsrc
+++ b/bochs/.bochsrc
@@ -1037,8 +1037,8 @@ speaker: enabled=1, mode=sound
 # as first parameter.
 # The 'slirp' module uses this parameter to specify a config file for
 # setting up an alternative IP configuration or additional features.
-# The 'vnet' module uses this parameter to specify an alternative
-# log file name.
+# The 'vnet' module uses this parameter to specify a file name for logging
+# packets in text format.
 #
 # BOOTROM: The bootrom value is optional, and is the name of the ROM image
 # to load. Note that this feature is only implemented for the PCI version of
