Packet logging in text format now controlled by option "pktlog" in slirp config.

--- a/bochs/misc/slirp.conf
+++ b/bochs/misc/slirp.conf
@@ -36,3 +36,6 @@
 
 # Host forwarding example (access guest SSH server from host port 12345)
 # hostfwd    = tcp::12345-:22
+
+# Enable packet logging in text format (similar to vnet)
+# pktlog     = slirp-pktlog.txt
