--- a/bochs/bios/Makefile.in
+++ b/bochs/bios/Makefile.in
@@ -43,7 +43,7 @@ BX_INCDIRS = -I.. -I$(srcdir)/.. -I../iodev -I$(srcdir)/../iodev
 LOCAL_CXXFLAGS =
 
 UPSTREAM_RELEASE_DATE = $(shell grep "Updated:" ../README | sed 's/Updated://')
-BUILDDATE = `date -d '$(UPSTREAM_RELEASE_DATE)' '+%m/%d/%y'`
+BUILDDATE = `date -u -d '$(UPSTREAM_RELEASE_DATE)' '+%m/%d/%y'`
 BIOS_BUILD_DATE = "-DBIOS_BUILD_DATE=\"$(BUILDDATE)\""
 #
 # -------- end configurable options --------------------------
