--- a/trunk/bochs/gui/Makefile.in
+++ b/trunk/bochs/gui/Makefile.in
@@ -215,7 +215,11 @@ carbon.o: carbon.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debu
  ../instrument/stubs/instrument.h keymap.h ../iodev/iodev.h ../plugin.h \
  ../extplugin.h ../param_names.h
 enh_dbg.o: enh_dbg.@CPP_SUFFIX@ ../config.h
-gtk_enh_dbg_osdep.o: gtk_enh_dbg_osdep.@CPP_SUFFIX@ ../config.h
+gtk_enh_dbg_osdep.o: gtk_enh_dbg_osdep.@CPP_SUFFIX@ ../bochs.h ../config.h \
+ ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h enh_dbg.h
 gui.o: gui.@CPP_SUFFIX@ ../iodev/iodev.h ../bochs.h ../config.h ../osdep.h \
  ../bx_debug/debug.h ../config.h ../osdep.h ../gui/siminterface.h \
  ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h \
@@ -225,16 +229,17 @@ gui.o: gui.@CPP_SUFFIX@ ../iodev/iodev.h ../bochs.h ../config.h ../osdep.h \
  ../gui/bitmaps/power.h ../gui/bitmaps/snapshot.h ../gui/bitmaps/copy.h \
  ../gui/bitmaps/paste.h ../gui/bitmaps/configbutton.h \
  ../gui/bitmaps/cdromd.h ../gui/bitmaps/userbutton.h \
- ../gui/bitmaps/saverestore.h
+ ../gui/bitmaps/saverestore.h sdl.h
 keymap.o: keymap.@CPP_SUFFIX@ ../param_names.h ../bochs.h ../config.h ../osdep.h \
  ../bx_debug/debug.h ../config.h ../osdep.h ../gui/siminterface.h \
  ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h \
  ../gui/gui.h ../instrument/stubs/instrument.h keymap.h
 macintosh.o: macintosh.@CPP_SUFFIX@ ../param_names.h ../bochs.h ../config.h \
  ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
- ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h \
- ../pc_system.h ../gui/gui.h ../instrument/stubs/instrument.h \
- ../iodev/iodev.h ../plugin.h ../extplugin.h
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h ../iodev/iodev.h ../plugin.h \
+ ../extplugin.h
 nogui.o: nogui.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
@@ -246,21 +251,21 @@ paramtree.o: paramtree.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h \
  ../gui/gui.h ../instrument/stubs/instrument.h paramtree.h
 rfb.o: rfb.@CPP_SUFFIX@ ../param_names.h ../iodev/iodev.h ../bochs.h ../config.h \
  ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
- ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h \
- ../pc_system.h ../gui/gui.h ../instrument/stubs/instrument.h ../plugin.h \
- ../extplugin.h keymap.h icon_bochs.h font/vga.bitmap.h sdl.h rfb.h \
- rfbkeys.h
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h ../plugin.h ../extplugin.h keymap.h \
+ icon_bochs.h font/vga.bitmap.h sdl.h rfb.h rfbkeys.h ../bxthread.h
 scrollwin.o: scrollwin.@CPP_SUFFIX@ ../config.h
 sdl2.o: sdl2.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
- ../iodev/iodev.h ../plugin.h ../extplugin.h
+ ../iodev/iodev.h ../plugin.h ../extplugin.h icon_bochs.h sdl.h sdlkeys.h
 sdl.o: sdl.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
- ../iodev/iodev.h ../plugin.h ../extplugin.h icon_bochs.h sdl.h sdlkeys.h
+ ../iodev/iodev.h ../plugin.h ../extplugin.h
 siminterface.o: siminterface.@CPP_SUFFIX@ ../param_names.h ../iodev/iodev.h \
  ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h ../config.h \
  ../osdep.h ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
@@ -278,23 +283,36 @@ term.o: term.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h 
  ../instrument/stubs/instrument.h ../param_names.h ../iodev/iodev.h \
  ../plugin.h ../extplugin.h
 textconfig.o: textconfig.@CPP_SUFFIX@ ../config.h ../osdep.h ../param_names.h \
- textconfig.h siminterface.h ../cpudb.h paramtree.h ../extplugin.h
+ textconfig.h siminterface.h ../cpudb.h paramtree.h
 vncsrv.o: vncsrv.@CPP_SUFFIX@ ../param_names.h ../iodev/iodev.h ../bochs.h \
  ../config.h ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
- ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h \
- ../pc_system.h ../gui/gui.h ../instrument/stubs/instrument.h ../plugin.h \
- ../extplugin.h keymap.h icon_bochs.h font/vga.bitmap.h sdl.h rfb.h \
- rfbkeys.h
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h ../plugin.h ../extplugin.h keymap.h \
+ icon_bochs.h font/vga.bitmap.h sdl.h rfb.h rfbkeys.h ../bxthread.h
 win32.o: win32.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
  ../iodev/iodev.h ../plugin.h ../extplugin.h
-win32dialog.o: win32dialog.@CPP_SUFFIX@ win32dialog.h ../config.h
-win32_enh_dbg_osdep.o: win32_enh_dbg_osdep.@CPP_SUFFIX@ ../config.h
-win32paramdlg.o: win32paramdlg.@CPP_SUFFIX@ win32dialog.h ../config.h
-wx.o: wx.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
- ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
+win32dialog.o: win32dialog.@CPP_SUFFIX@ win32dialog.h ../config.h ../bochs.h \
+ ../config.h ../osdep.h ../bx_debug/debug.h ../osdep.h \
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h ../param_names.h win32res.h \
+ win32paramdlg.h textconfig.h
+win32_enh_dbg_osdep.o: win32_enh_dbg_osdep.@CPP_SUFFIX@ ../bochs.h ../config.h \
+ ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h win32dialog.h enh_dbg.h
+win32paramdlg.o: win32paramdlg.@CPP_SUFFIX@ win32dialog.h ../config.h ../bochs.h \
+ ../config.h ../osdep.h ../bx_debug/debug.h ../osdep.h \
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h win32res.h
+wx.o: wx.@CPP_SUFFIX@ ../config.h ../bochs.h ../config.h ../osdep.h \
+ ../bx_debug/debug.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
  ../iodev/iodev.h ../plugin.h ../extplugin.h font/vga.bitmap.h wxmain.h
@@ -311,7 +329,7 @@ x.o: x.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
- ../iodev/iodev.h ../plugin.h ../extplugin.h enh_dbg.h icon_bochs.xpm \
+ ../iodev/iodev.h ../plugin.h ../extplugin.h enh_dbg.h icon_bochs.h \
  font/vga.bitmap.h
 amigaos.lo: amigaos.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h \
  ../bx_debug/debug.h ../config.h ../osdep.h ../gui/siminterface.h \
@@ -324,7 +342,11 @@ carbon.lo: carbon.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/deb
  ../instrument/stubs/instrument.h keymap.h ../iodev/iodev.h ../plugin.h \
  ../extplugin.h ../param_names.h
 enh_dbg.lo: enh_dbg.@CPP_SUFFIX@ ../config.h
-gtk_enh_dbg_osdep.lo: gtk_enh_dbg_osdep.@CPP_SUFFIX@ ../config.h
+gtk_enh_dbg_osdep.lo: gtk_enh_dbg_osdep.@CPP_SUFFIX@ ../bochs.h ../config.h \
+ ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h enh_dbg.h
 gui.lo: gui.@CPP_SUFFIX@ ../iodev/iodev.h ../bochs.h ../config.h ../osdep.h \
  ../bx_debug/debug.h ../config.h ../osdep.h ../gui/siminterface.h \
  ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h \
@@ -334,16 +356,17 @@ gui.lo: gui.@CPP_SUFFIX@ ../iodev/iodev.h ../bochs.h ../config.h ../osdep.h \
  ../gui/bitmaps/power.h ../gui/bitmaps/snapshot.h ../gui/bitmaps/copy.h \
  ../gui/bitmaps/paste.h ../gui/bitmaps/configbutton.h \
  ../gui/bitmaps/cdromd.h ../gui/bitmaps/userbutton.h \
- ../gui/bitmaps/saverestore.h
+ ../gui/bitmaps/saverestore.h sdl.h
 keymap.lo: keymap.@CPP_SUFFIX@ ../param_names.h ../bochs.h ../config.h ../osdep.h \
  ../bx_debug/debug.h ../config.h ../osdep.h ../gui/siminterface.h \
  ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h \
  ../gui/gui.h ../instrument/stubs/instrument.h keymap.h
 macintosh.lo: macintosh.@CPP_SUFFIX@ ../param_names.h ../bochs.h ../config.h \
  ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
- ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h \
- ../pc_system.h ../gui/gui.h ../instrument/stubs/instrument.h \
- ../iodev/iodev.h ../plugin.h ../extplugin.h
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h ../iodev/iodev.h ../plugin.h \
+ ../extplugin.h
 nogui.lo: nogui.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
@@ -355,21 +378,21 @@ paramtree.lo: paramtree.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h \
  ../gui/gui.h ../instrument/stubs/instrument.h paramtree.h
 rfb.lo: rfb.@CPP_SUFFIX@ ../param_names.h ../iodev/iodev.h ../bochs.h ../config.h \
  ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
- ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h \
- ../pc_system.h ../gui/gui.h ../instrument/stubs/instrument.h ../plugin.h \
- ../extplugin.h keymap.h icon_bochs.h font/vga.bitmap.h sdl.h rfb.h \
- rfbkeys.h
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h ../plugin.h ../extplugin.h keymap.h \
+ icon_bochs.h font/vga.bitmap.h sdl.h rfb.h rfbkeys.h ../bxthread.h
 scrollwin.lo: scrollwin.@CPP_SUFFIX@ ../config.h
 sdl2.lo: sdl2.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
- ../iodev/iodev.h ../plugin.h ../extplugin.h
+ ../iodev/iodev.h ../plugin.h ../extplugin.h icon_bochs.h sdl.h sdlkeys.h
 sdl.lo: sdl.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
- ../iodev/iodev.h ../plugin.h ../extplugin.h icon_bochs.h sdl.h sdlkeys.h
+ ../iodev/iodev.h ../plugin.h ../extplugin.h
 siminterface.lo: siminterface.@CPP_SUFFIX@ ../param_names.h ../iodev/iodev.h \
  ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h ../config.h \
  ../osdep.h ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
@@ -387,23 +410,36 @@ term.lo: term.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h
  ../instrument/stubs/instrument.h ../param_names.h ../iodev/iodev.h \
  ../plugin.h ../extplugin.h
 textconfig.lo: textconfig.@CPP_SUFFIX@ ../config.h ../osdep.h ../param_names.h \
- textconfig.h siminterface.h ../cpudb.h paramtree.h ../extplugin.h
+ textconfig.h siminterface.h ../cpudb.h paramtree.h
 vncsrv.lo: vncsrv.@CPP_SUFFIX@ ../param_names.h ../iodev/iodev.h ../bochs.h \
  ../config.h ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
- ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h ../memory/memory-bochs.h \
- ../pc_system.h ../gui/gui.h ../instrument/stubs/instrument.h ../plugin.h \
- ../extplugin.h keymap.h icon_bochs.h font/vga.bitmap.h sdl.h rfb.h \
- rfbkeys.h
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h ../plugin.h ../extplugin.h keymap.h \
+ icon_bochs.h font/vga.bitmap.h sdl.h rfb.h rfbkeys.h ../bxthread.h
 win32.lo: win32.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
  ../iodev/iodev.h ../plugin.h ../extplugin.h
-win32dialog.lo: win32dialog.@CPP_SUFFIX@ win32dialog.h ../config.h
-win32_enh_dbg_osdep.lo: win32_enh_dbg_osdep.@CPP_SUFFIX@ ../config.h
-win32paramdlg.lo: win32paramdlg.@CPP_SUFFIX@ win32dialog.h ../config.h
-wx.lo: wx.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
- ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
+win32dialog.lo: win32dialog.@CPP_SUFFIX@ win32dialog.h ../config.h ../bochs.h \
+ ../config.h ../osdep.h ../bx_debug/debug.h ../osdep.h \
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h ../param_names.h win32res.h \
+ win32paramdlg.h textconfig.h
+win32_enh_dbg_osdep.lo: win32_enh_dbg_osdep.@CPP_SUFFIX@ ../bochs.h ../config.h \
+ ../osdep.h ../bx_debug/debug.h ../config.h ../osdep.h \
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h win32dialog.h enh_dbg.h
+win32paramdlg.lo: win32paramdlg.@CPP_SUFFIX@ win32dialog.h ../config.h ../bochs.h \
+ ../config.h ../osdep.h ../bx_debug/debug.h ../osdep.h \
+ ../gui/siminterface.h ../cpudb.h ../gui/paramtree.h \
+ ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
+ ../instrument/stubs/instrument.h win32res.h
+wx.lo: wx.@CPP_SUFFIX@ ../config.h ../bochs.h ../config.h ../osdep.h \
+ ../bx_debug/debug.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
  ../iodev/iodev.h ../plugin.h ../extplugin.h font/vga.bitmap.h wxmain.h
@@ -420,5 +456,5 @@ x.lo: x.@CPP_SUFFIX@ ../bochs.h ../config.h ../osdep.h ../bx_debug/debug.h \
  ../config.h ../osdep.h ../gui/siminterface.h ../cpudb.h \
  ../gui/paramtree.h ../memory/memory-bochs.h ../pc_system.h ../gui/gui.h \
  ../instrument/stubs/instrument.h ../param_names.h keymap.h \
- ../iodev/iodev.h ../plugin.h ../extplugin.h enh_dbg.h icon_bochs.xpm \
+ ../iodev/iodev.h ../plugin.h ../extplugin.h enh_dbg.h icon_bochs.h \
  font/vga.bitmap.h
