--- a/bochs/cpu/fpu/Makefile.in
+++ b/bochs/cpu/fpu/Makefile.in
@@ -78,15 +78,15 @@ f2xm1.o: f2xm1.@CPP_SUFFIX@ softfloatx80.h softfloat.h ../../config.h \
  softfloat-specialize.h softfloat-macros.h softfloat-round-pack.h
 ferr.o: ferr.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h ../../pc_system.h ../../gui/gui.h \
- ../../instrument/stubs/instrument.h ../cpu.h \
- ../decoder/decoder.h ../i387.h ../fpu/softfloat.h \
- ../fpu/tag_w.h ../fpu/status_w.h ../fpu/control_w.h \
- ../crregs.h ../descriptor.h ../decoder/instr.h \
- ../lazy_flags.h ../tlb.h ../icache.h \
- ../apic.h ../xmm.h ../vmx.h ../svm.h \
- ../cpuid.h ../stack.h ../access.h \
+ ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
+ ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../instrument/stubs/instrument.h ../../cpu/cpu.h \
+ ../../cpu/decoder/decoder.h ../../cpu/i387.h ../../cpu/fpu/softfloat.h \
+ ../../cpu/fpu/tag_w.h ../../cpu/fpu/status_w.h ../../cpu/fpu/control_w.h \
+ ../../cpu/crregs.h ../../cpu/descriptor.h ../../cpu/decoder/instr.h \
+ ../../cpu/lazy_flags.h ../../cpu/tlb.h ../../cpu/icache.h \
+ ../../cpu/apic.h ../../cpu/xmm.h ../../cpu/vmx.h ../../cpu/svm.h \
+ ../../cpu/cpuid.h ../../cpu/stack.h ../../cpu/access.h \
  softfloat-specialize.h softfloat.h
 fpatan.o: fpatan.@CPP_SUFFIX@ softfloatx80.h softfloat.h ../../config.h \
  softfloat-specialize.h softfloat-macros.h softfloat-round-pack.h \
@@ -95,101 +95,102 @@ fprem.o: fprem.@CPP_SUFFIX@ softfloatx80.h softfloat.h ../../config.h \
  softfloat-specialize.h softfloat-round-pack.h softfloat-macros.h
 fpu.o: fpu.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h ../../pc_system.h ../../gui/gui.h \
- ../../instrument/stubs/instrument.h ../cpu.h \
- ../decoder/decoder.h ../i387.h ../fpu/softfloat.h \
- ../fpu/tag_w.h ../fpu/status_w.h ../fpu/control_w.h \
- ../crregs.h ../descriptor.h ../decoder/instr.h \
- ../lazy_flags.h ../tlb.h ../icache.h \
- ../apic.h ../xmm.h ../vmx.h ../svm.h \
- ../cpuid.h ../stack.h ../access.h \
+ ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
+ ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../instrument/stubs/instrument.h ../../cpu/cpu.h \
+ ../../cpu/decoder/decoder.h ../../cpu/i387.h ../../cpu/fpu/softfloat.h \
+ ../../cpu/fpu/tag_w.h ../../cpu/fpu/status_w.h ../../cpu/fpu/control_w.h \
+ ../../cpu/crregs.h ../../cpu/descriptor.h ../../cpu/decoder/instr.h \
+ ../../cpu/lazy_flags.h ../../cpu/tlb.h ../../cpu/icache.h \
+ ../../cpu/apic.h ../../cpu/xmm.h ../../cpu/vmx.h ../../cpu/svm.h \
+ ../../cpu/cpuid.h ../../cpu/stack.h ../../cpu/access.h \
  ../../iodev/iodev.h ../../plugin.h ../../extplugin.h ../../param_names.h \
- softfloatx80.h softfloat.h softfloat-specialize.h
+ ../../pc_system.h ../../gui/gui.h softfloatx80.h softfloat.h \
+ softfloat-specialize.h
 fpu_arith.o: fpu_arith.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h ../../pc_system.h ../../gui/gui.h \
- ../../instrument/stubs/instrument.h ../cpu.h \
- ../decoder/decoder.h ../i387.h ../fpu/softfloat.h \
- ../fpu/tag_w.h ../fpu/status_w.h ../fpu/control_w.h \
- ../crregs.h ../descriptor.h ../decoder/instr.h \
- ../lazy_flags.h ../tlb.h ../icache.h \
- ../apic.h ../xmm.h ../vmx.h ../svm.h \
- ../cpuid.h ../stack.h ../access.h softfloatx80.h \
+ ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
+ ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../instrument/stubs/instrument.h ../../cpu/cpu.h \
+ ../../cpu/decoder/decoder.h ../../cpu/i387.h ../../cpu/fpu/softfloat.h \
+ ../../cpu/fpu/tag_w.h ../../cpu/fpu/status_w.h ../../cpu/fpu/control_w.h \
+ ../../cpu/crregs.h ../../cpu/descriptor.h ../../cpu/decoder/instr.h \
+ ../../cpu/lazy_flags.h ../../cpu/tlb.h ../../cpu/icache.h \
+ ../../cpu/apic.h ../../cpu/xmm.h ../../cpu/vmx.h ../../cpu/svm.h \
+ ../../cpu/cpuid.h ../../cpu/stack.h ../../cpu/access.h softfloatx80.h \
  softfloat.h softfloat-specialize.h
 fpu_cmov.o: fpu_cmov.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h ../../pc_system.h ../../gui/gui.h \
- ../../instrument/stubs/instrument.h ../cpu.h \
- ../decoder/decoder.h ../i387.h ../fpu/softfloat.h \
- ../fpu/tag_w.h ../fpu/status_w.h ../fpu/control_w.h \
- ../crregs.h ../descriptor.h ../decoder/instr.h \
- ../lazy_flags.h ../tlb.h ../icache.h \
- ../apic.h ../xmm.h ../vmx.h ../svm.h \
- ../cpuid.h ../stack.h ../access.h
+ ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
+ ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../instrument/stubs/instrument.h ../../cpu/cpu.h \
+ ../../cpu/decoder/decoder.h ../../cpu/i387.h ../../cpu/fpu/softfloat.h \
+ ../../cpu/fpu/tag_w.h ../../cpu/fpu/status_w.h ../../cpu/fpu/control_w.h \
+ ../../cpu/crregs.h ../../cpu/descriptor.h ../../cpu/decoder/instr.h \
+ ../../cpu/lazy_flags.h ../../cpu/tlb.h ../../cpu/icache.h \
+ ../../cpu/apic.h ../../cpu/xmm.h ../../cpu/vmx.h ../../cpu/svm.h \
+ ../../cpu/cpuid.h ../../cpu/stack.h ../../cpu/access.h
 fpu_compare.o: fpu_compare.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h ../../pc_system.h ../../gui/gui.h \
- ../../instrument/stubs/instrument.h ../cpu.h \
- ../decoder/decoder.h ../i387.h ../fpu/softfloat.h \
- ../fpu/tag_w.h ../fpu/status_w.h ../fpu/control_w.h \
- ../crregs.h ../descriptor.h ../decoder/instr.h \
- ../lazy_flags.h ../tlb.h ../icache.h \
- ../apic.h ../xmm.h ../vmx.h ../svm.h \
- ../cpuid.h ../stack.h ../access.h \
- ../decoder/ia_opcodes.h ../decoder/ia_opcodes.def \
+ ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
+ ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../instrument/stubs/instrument.h ../../cpu/cpu.h \
+ ../../cpu/decoder/decoder.h ../../cpu/i387.h ../../cpu/fpu/softfloat.h \
+ ../../cpu/fpu/tag_w.h ../../cpu/fpu/status_w.h ../../cpu/fpu/control_w.h \
+ ../../cpu/crregs.h ../../cpu/descriptor.h ../../cpu/decoder/instr.h \
+ ../../cpu/lazy_flags.h ../../cpu/tlb.h ../../cpu/icache.h \
+ ../../cpu/apic.h ../../cpu/xmm.h ../../cpu/vmx.h ../../cpu/svm.h \
+ ../../cpu/cpuid.h ../../cpu/stack.h ../../cpu/access.h \
+ ../../cpu/decoder/ia_opcodes.h ../../cpu/decoder/ia_opcodes.def \
  softfloatx80.h softfloat.h softfloat-specialize.h
 fpu_const.o: fpu_const.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h ../../pc_system.h ../../gui/gui.h \
- ../../instrument/stubs/instrument.h ../cpu.h \
- ../decoder/decoder.h ../i387.h ../fpu/softfloat.h \
- ../fpu/tag_w.h ../fpu/status_w.h ../fpu/control_w.h \
- ../crregs.h ../descriptor.h ../decoder/instr.h \
- ../lazy_flags.h ../tlb.h ../icache.h \
- ../apic.h ../xmm.h ../vmx.h ../svm.h \
- ../cpuid.h ../stack.h ../access.h softfloatx80.h \
+ ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
+ ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../instrument/stubs/instrument.h ../../cpu/cpu.h \
+ ../../cpu/decoder/decoder.h ../../cpu/i387.h ../../cpu/fpu/softfloat.h \
+ ../../cpu/fpu/tag_w.h ../../cpu/fpu/status_w.h ../../cpu/fpu/control_w.h \
+ ../../cpu/crregs.h ../../cpu/descriptor.h ../../cpu/decoder/instr.h \
+ ../../cpu/lazy_flags.h ../../cpu/tlb.h ../../cpu/icache.h \
+ ../../cpu/apic.h ../../cpu/xmm.h ../../cpu/vmx.h ../../cpu/svm.h \
+ ../../cpu/cpuid.h ../../cpu/stack.h ../../cpu/access.h softfloatx80.h \
  softfloat.h softfloat-specialize.h
 fpu_load_store.o: fpu_load_store.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h ../../pc_system.h ../../gui/gui.h \
- ../../instrument/stubs/instrument.h ../cpu.h \
- ../decoder/decoder.h ../i387.h ../fpu/softfloat.h \
- ../fpu/tag_w.h ../fpu/status_w.h ../fpu/control_w.h \
- ../crregs.h ../descriptor.h ../decoder/instr.h \
- ../lazy_flags.h ../tlb.h ../icache.h \
- ../apic.h ../xmm.h ../vmx.h ../svm.h \
- ../cpuid.h ../stack.h ../access.h \
- ../decoder/ia_opcodes.h ../decoder/ia_opcodes.def \
+ ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
+ ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../instrument/stubs/instrument.h ../../cpu/cpu.h \
+ ../../cpu/decoder/decoder.h ../../cpu/i387.h ../../cpu/fpu/softfloat.h \
+ ../../cpu/fpu/tag_w.h ../../cpu/fpu/status_w.h ../../cpu/fpu/control_w.h \
+ ../../cpu/crregs.h ../../cpu/descriptor.h ../../cpu/decoder/instr.h \
+ ../../cpu/lazy_flags.h ../../cpu/tlb.h ../../cpu/icache.h \
+ ../../cpu/apic.h ../../cpu/xmm.h ../../cpu/vmx.h ../../cpu/svm.h \
+ ../../cpu/cpuid.h ../../cpu/stack.h ../../cpu/access.h \
+ ../../cpu/decoder/ia_opcodes.h ../../cpu/decoder/ia_opcodes.def \
  softfloatx80.h softfloat.h softfloat-specialize.h
 fpu_misc.o: fpu_misc.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h ../../pc_system.h ../../gui/gui.h \
- ../../instrument/stubs/instrument.h ../cpu.h \
- ../decoder/decoder.h ../i387.h ../fpu/softfloat.h \
- ../fpu/tag_w.h ../fpu/status_w.h ../fpu/control_w.h \
- ../crregs.h ../descriptor.h ../decoder/instr.h \
- ../lazy_flags.h ../tlb.h ../icache.h \
- ../apic.h ../xmm.h ../vmx.h ../svm.h \
- ../cpuid.h ../stack.h ../access.h softfloatx80.h \
+ ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
+ ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../instrument/stubs/instrument.h ../../cpu/cpu.h \
+ ../../cpu/decoder/decoder.h ../../cpu/i387.h ../../cpu/fpu/softfloat.h \
+ ../../cpu/fpu/tag_w.h ../../cpu/fpu/status_w.h ../../cpu/fpu/control_w.h \
+ ../../cpu/crregs.h ../../cpu/descriptor.h ../../cpu/decoder/instr.h \
+ ../../cpu/lazy_flags.h ../../cpu/tlb.h ../../cpu/icache.h \
+ ../../cpu/apic.h ../../cpu/xmm.h ../../cpu/vmx.h ../../cpu/svm.h \
+ ../../cpu/cpuid.h ../../cpu/stack.h ../../cpu/access.h softfloatx80.h \
  softfloat.h softfloat-specialize.h
 fpu_trans.o: fpu_trans.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h ../../pc_system.h ../../gui/gui.h \
- ../../instrument/stubs/instrument.h ../cpu.h \
- ../decoder/decoder.h ../i387.h ../fpu/softfloat.h \
- ../fpu/tag_w.h ../fpu/status_w.h ../fpu/control_w.h \
- ../crregs.h ../descriptor.h ../decoder/instr.h \
- ../lazy_flags.h ../tlb.h ../icache.h \
- ../apic.h ../xmm.h ../vmx.h ../svm.h \
- ../cpuid.h ../stack.h ../access.h softfloatx80.h \
+ ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
+ ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../instrument/stubs/instrument.h ../../cpu/cpu.h \
+ ../../cpu/decoder/decoder.h ../../cpu/i387.h ../../cpu/fpu/softfloat.h \
+ ../../cpu/fpu/tag_w.h ../../cpu/fpu/status_w.h ../../cpu/fpu/control_w.h \
+ ../../cpu/crregs.h ../../cpu/descriptor.h ../../cpu/decoder/instr.h \
+ ../../cpu/lazy_flags.h ../../cpu/tlb.h ../../cpu/icache.h \
+ ../../cpu/apic.h ../../cpu/xmm.h ../../cpu/vmx.h ../../cpu/svm.h \
+ ../../cpu/cpuid.h ../../cpu/stack.h ../../cpu/access.h softfloatx80.h \
  softfloat.h softfloat-specialize.h
 fsincos.o: fsincos.@CPP_SUFFIX@ softfloatx80.h softfloat.h ../../config.h \
  softfloat-specialize.h softfloat-macros.h softfloat-round-pack.h \
@@ -198,10 +199,6 @@ fyl2x.o: fyl2x.@CPP_SUFFIX@ softfloatx80.h softfloat.h ../../config.h \
  softfloat-specialize.h softfloat-macros.h softfloat-round-pack.h \
  fpu_constant.h
 poly.o: poly.@CPP_SUFFIX@ softfloat.h ../../config.h
-softfloat.o: softfloat.@CPP_SUFFIX@ softfloat.h ../../config.h \
- softfloat-round-pack.h softfloat-macros.h softfloat-specialize.h
-softfloat16.o: softfloat16.@CPP_SUFFIX@ softfloat.h ../../config.h \
- softfloat-round-pack.h softfloat-specialize.h softfloat-macros.h
 softfloat-muladd.o: softfloat-muladd.@CPP_SUFFIX@ softfloat.h ../../config.h \
  softfloat-round-pack.h softfloat-macros.h softfloat-specialize.h
 softfloat-round-pack.o: softfloat-round-pack.@CPP_SUFFIX@ softfloat.h \
@@ -209,5 +206,9 @@ softfloat-round-pack.o: softfloat-round-pack.@CPP_SUFFIX@ softfloat.h \
  softfloat-specialize.h
 softfloat-specialize.o: softfloat-specialize.@CPP_SUFFIX@ softfloat.h \
  ../../config.h softfloat-specialize.h softfloat-macros.h
+softfloat.o: softfloat.@CPP_SUFFIX@ softfloat.h ../../config.h \
+ softfloat-round-pack.h softfloat-macros.h softfloat-specialize.h
+softfloat16.o: softfloat16.@CPP_SUFFIX@ softfloat.h ../../config.h \
+ softfloat-round-pack.h softfloat-specialize.h softfloat-macros.h
 softfloatx80.o: softfloatx80.@CPP_SUFFIX@ softfloatx80.h softfloat.h ../../config.h \
  softfloat-specialize.h softfloat-round-pack.h softfloat-macros.h
